1. 更新了大文本embedding功能 2. 添加了自动识别编码格式功能

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langgraph",
     "python-multipart",
     "chromadb",
-    "langchain_chroma"
+    "langchain_chroma",
+    "chardet"
 
 ]
