1.修正了init.sh初始化错误 2.增加了向量化失败重新尝试功能 3.embedding模型采用qwen v4 4.llm采用qwen-max

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-multipart",
     "chromadb",
     "langchain_chroma",
-    "chardet"
+    "chardet",
+    "docx2txt"
 
 ]
